@@ -43,7 +43,7 @@
       <id>18298344</id>
       <timestamp>2005-07-07T01:34:09Z</timestamp>
       <contributor>
-        <username>Test User</username>
+        <username>Invalid User Name - Exceeds 100 Characters 4567895123456789612345678971234567898123456789912345678901234567891</username>
         <id>192361</id>
       </contributor>
       <comment>add additional link</comment>
